--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+Flask==0.10.1
+Jinja2==2.8
+MarkupSafe==0.23
 SQLAlchemy==1.0.9
+Werkzeug==0.11.2
+argparse==1.2.1
 beautifulsoup4==4.4.1
+itsdangerous==0.24
 psycopg2==2.6.1
 requests==2.7.0
 wsgiref==0.1.2
